PGN to FEN/PGNParser.py
# Generated from PGN.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PGNParser ( Parser ):

    grammarFileName = "PGN.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'K'", "'Q'", "'R'", "'B'", "'N'", "'a'", 
                     "'b'", "'c'", "'d'", "'e'", "'f'", "'g'", "'h'", "'1'", 
                     "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'x'", 
                     "'='", "'+'", "'#'", "'O-O'", "'O-O-O'", "'1-0'", "'0-1'", 
                     "'1/2-1/2'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TAG_NAME", 
                      "STRING", "MOVE_NUMBER", "WS" ]

    RULE_game = 0
    RULE_game_info = 1
    RULE_move_text = 2
    RULE_move_pair = 3
    RULE_white_move = 4
    RULE_black_move = 5
    RULE_move = 6
    RULE_pawn_move = 7
    RULE_piece = 8
    RULE_disambiguation = 9
    RULE_column = 10
    RULE_row = 11
    RULE_square = 12
    RULE_takes = 13
    RULE_promotion = 14
    RULE_check = 15
    RULE_mate = 16
    RULE_castle_kingside = 17
    RULE_castle_queenside = 18
    RULE_result = 19

    ruleNames =  [ "game", "game_info", "move_text", "move_pair", "white_move", 
                   "black_move", "move", "pawn_move", "piece", "disambiguation", 
                   "column", "row", "square", "takes", "promotion", "check", 
                   "mate", "castle_kingside", "castle_queenside", "result" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    TAG_NAME=31
    STRING=32
    MOVE_NUMBER=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def move_text(self):
            return self.getTypedRuleContext(PGNParser.Move_textContext,0)


        def result(self):
            return self.getTypedRuleContext(PGNParser.ResultContext,0)


        def game_info(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PGNParser.Game_infoContext)
            else:
                return self.getTypedRuleContext(PGNParser.Game_infoContext,i)


        def getRuleIndex(self):
            return PGNParser.RULE_game

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGame" ):
                listener.enterGame(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGame" ):
                listener.exitGame(self)




    def game(self):

        localctx = PGNParser.GameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_game)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 40
                self.game_info()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.move_text()
            self.state = 47
            self.result()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Game_infoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAG_NAME(self):
            return self.getToken(PGNParser.TAG_NAME, 0)

        def STRING(self):
            return self.getToken(PGNParser.STRING, 0)

        def getRuleIndex(self):
            return PGNParser.RULE_game_info

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGame_info" ):
                listener.enterGame_info(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGame_info" ):
                listener.exitGame_info(self)




    def game_info(self):

        localctx = PGNParser.Game_infoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_game_info)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(PGNParser.TAG_NAME)
            self.state = 50
            self.match(PGNParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Move_textContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def move_pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PGNParser.Move_pairContext)
            else:
                return self.getTypedRuleContext(PGNParser.Move_pairContext,i)


        def getRuleIndex(self):
            return PGNParser.RULE_move_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMove_text" ):
                listener.enterMove_text(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMove_text" ):
                listener.exitMove_text(self)




    def move_text(self):

        localctx = PGNParser.Move_textContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_move_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.move_pair()
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==33):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Move_pairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOVE_NUMBER(self):
            return self.getToken(PGNParser.MOVE_NUMBER, 0)

        def white_move(self):
            return self.getTypedRuleContext(PGNParser.White_moveContext,0)


        def black_move(self):
            return self.getTypedRuleContext(PGNParser.Black_moveContext,0)


        def getRuleIndex(self):
            return PGNParser.RULE_move_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMove_pair" ):
                listener.enterMove_pair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMove_pair" ):
                listener.exitMove_pair(self)




    def move_pair(self):

        localctx = PGNParser.Move_pairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_move_pair)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(PGNParser.MOVE_NUMBER)
            self.state = 58
            self.white_move()
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 201342974) != 0):
                self.state = 59
                self.black_move()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class White_moveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def move(self):
            return self.getTypedRuleContext(PGNParser.MoveContext,0)


        def getRuleIndex(self):
            return PGNParser.RULE_white_move

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhite_move" ):
                listener.enterWhite_move(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhite_move" ):
                listener.exitWhite_move(self)




    def white_move(self):

        localctx = PGNParser.White_moveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_white_move)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.move(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Black_moveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def move(self):
            return self.getTypedRuleContext(PGNParser.MoveContext,0)


        def getRuleIndex(self):
            return PGNParser.RULE_black_move

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlack_move" ):
                listener.enterBlack_move(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlack_move" ):
                listener.exitBlack_move(self)




    def black_move(self):

        localctx = PGNParser.Black_moveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_black_move)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.move(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def piece(self):
            return self.getTypedRuleContext(PGNParser.PieceContext,0)


        def square(self):
            return self.getTypedRuleContext(PGNParser.SquareContext,0)


        def disambiguation(self):
            return self.getTypedRuleContext(PGNParser.DisambiguationContext,0)


        def takes(self):
            return self.getTypedRuleContext(PGNParser.TakesContext,0)


        def pawn_move(self):
            return self.getTypedRuleContext(PGNParser.Pawn_moveContext,0)


        def castle_kingside(self):
            return self.getTypedRuleContext(PGNParser.Castle_kingsideContext,0)


        def castle_queenside(self):
            return self.getTypedRuleContext(PGNParser.Castle_queensideContext,0)


        def move(self):
            return self.getTypedRuleContext(PGNParser.MoveContext,0)


        def check(self):
            return self.getTypedRuleContext(PGNParser.CheckContext,0)


        def mate(self):
            return self.getTypedRuleContext(PGNParser.MateContext,0)


        def getRuleIndex(self):
            return PGNParser.RULE_move

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMove" ):
                listener.enterMove(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMove" ):
                listener.exitMove(self)



    def move(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PGNParser.MoveContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_move, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 5]:
                self.state = 67
                self.piece()
                self.state = 69
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 68
                    self.disambiguation()


                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==22:
                    self.state = 71
                    self.takes()


                self.state = 74
                self.square()
                pass
            elif token in [6, 7, 8, 9, 10, 11, 12, 13]:
                self.state = 76
                self.pawn_move(0)
                pass
            elif token in [26]:
                self.state = 77
                self.castle_kingside()
                pass
            elif token in [27]:
                self.state = 78
                self.castle_queenside()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 85
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = PGNParser.MoveContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_move)
                        self.state = 81
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 82
                        self.check()
                        pass

                    elif la_ == 2:
                        localctx = PGNParser.MoveContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_move)
                        self.state = 83
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 84
                        self.mate()
                        pass

             
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Pawn_moveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def square(self):
            return self.getTypedRuleContext(PGNParser.SquareContext,0)


        def column(self):
            return self.getTypedRuleContext(PGNParser.ColumnContext,0)


        def takes(self):
            return self.getTypedRuleContext(PGNParser.TakesContext,0)


        def pawn_move(self):
            return self.getTypedRuleContext(PGNParser.Pawn_moveContext,0)


        def promotion(self):
            return self.getTypedRuleContext(PGNParser.PromotionContext,0)


        def getRuleIndex(self):
            return PGNParser.RULE_pawn_move

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPawn_move" ):
                listener.enterPawn_move(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPawn_move" ):
                listener.exitPawn_move(self)



    def pawn_move(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PGNParser.Pawn_moveContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_pawn_move, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 91
                self.square()
                pass

            elif la_ == 2:
                self.state = 92
                self.column()
                self.state = 93
                self.takes()
                self.state = 94
                self.square()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PGNParser.Pawn_moveContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_pawn_move)
                    self.state = 98
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 99
                    self.promotion() 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PieceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PGNParser.RULE_piece

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPiece" ):
                listener.enterPiece(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPiece" ):
                listener.exitPiece(self)




    def piece(self):

        localctx = PGNParser.PieceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_piece)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 62) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisambiguationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(PGNParser.ColumnContext,0)


        def row(self):
            return self.getTypedRuleContext(PGNParser.RowContext,0)


        def getRuleIndex(self):
            return PGNParser.RULE_disambiguation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisambiguation" ):
                listener.enterDisambiguation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisambiguation" ):
                listener.exitDisambiguation(self)




    def disambiguation(self):

        localctx = PGNParser.DisambiguationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_disambiguation)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.column()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.row()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.column()
                self.state = 110
                self.row()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PGNParser.RULE_column

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn" ):
                listener.enterColumn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn" ):
                listener.exitColumn(self)




    def column(self):

        localctx = PGNParser.ColumnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_column)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 16320) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PGNParser.RULE_row

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRow" ):
                listener.enterRow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRow" ):
                listener.exitRow(self)




    def row(self):

        localctx = PGNParser.RowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4177920) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SquareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(PGNParser.ColumnContext,0)


        def row(self):
            return self.getTypedRuleContext(PGNParser.RowContext,0)


        def getRuleIndex(self):
            return PGNParser.RULE_square

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSquare" ):
                listener.enterSquare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSquare" ):
                listener.exitSquare(self)




    def square(self):

        localctx = PGNParser.SquareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_square)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.column()
            self.state = 119
            self.row()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TakesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PGNParser.RULE_takes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTakes" ):
                listener.enterTakes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTakes" ):
                listener.exitTakes(self)




    def takes(self):

        localctx = PGNParser.TakesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_takes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(PGNParser.T__21)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PromotionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def piece(self):
            return self.getTypedRuleContext(PGNParser.PieceContext,0)


        def getRuleIndex(self):
            return PGNParser.RULE_promotion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPromotion" ):
                listener.enterPromotion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPromotion" ):
                listener.exitPromotion(self)




    def promotion(self):

        localctx = PGNParser.PromotionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_promotion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(PGNParser.T__22)
            self.state = 124
            self.piece()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CheckContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PGNParser.RULE_check

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCheck" ):
                listener.enterCheck(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCheck" ):
                listener.exitCheck(self)




    def check(self):

        localctx = PGNParser.CheckContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_check)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(PGNParser.T__23)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PGNParser.RULE_mate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMate" ):
                listener.enterMate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMate" ):
                listener.exitMate(self)




    def mate(self):

        localctx = PGNParser.MateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_mate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(PGNParser.T__24)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Castle_kingsideContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PGNParser.RULE_castle_kingside

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCastle_kingside" ):
                listener.enterCastle_kingside(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCastle_kingside" ):
                listener.exitCastle_kingside(self)




    def castle_kingside(self):

        localctx = PGNParser.Castle_kingsideContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_castle_kingside)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(PGNParser.T__25)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Castle_queensideContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PGNParser.RULE_castle_queenside

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCastle_queenside" ):
                listener.enterCastle_queenside(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCastle_queenside" ):
                listener.exitCastle_queenside(self)




    def castle_queenside(self):

        localctx = PGNParser.Castle_queensideContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_castle_queenside)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(PGNParser.T__26)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PGNParser.RULE_result

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResult" ):
                listener.enterResult(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResult" ):
                listener.exitResult(self)




    def result(self):

        localctx = PGNParser.ResultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_result)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1879048192) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.move_sempred
        self._predicates[7] = self.pawn_move_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def move_sempred(self, localctx:MoveContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 1)
         

    def pawn_move_sempred(self, localctx:Pawn_moveContext, predIndex:int):
            if predIndex == 2:
                return self.precpred(self._ctx, 1)
         




